# test_computedfields

./: db.sqlite3  manage.py  pyproject.toml  test.py
advert/: models.py
advert/migrations/: 0001_initial.py
test_computedfields/: asgi.py  settings.py  urls.py  wsgi.py
